<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    tools:context=".Activity.AddBook"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@drawable/white_transpearent_radius20"
        android:orientation="vertical">


        <TextView
            android:id="@+id/AddBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="136dp"
            android:fontFamily="@font/yatraone_regular"
            android:padding="5dp"
            android:text="@string/add_book"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/categoriesName"
            app:layout_constraintEnd_toEndOf="@+id/AddBookTitle"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="@+id/AddBookTitle"
            tools:srcCompat="@tools:sample/avatars" />

        <Spinner
            android:id="@+id/categoriesName"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="129dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/bookNameEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/categories"
            android:textColor="@color/blue2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bookNameEdit"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookNameEdit"
            android:layout_width="382dp"
            android:layout_height="76dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/book_name"
            android:textColorHint="@color/Dark_Green"
            app:layout_constraintBottom_toTopOf="@+id/authorNameEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_bookname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authorNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="48dp"
            android:hint="@string/author_name"
            android:textColorHint="@color/Dark_Green"
            app:layout_constraintBottom_toTopOf="@+id/pageNumberEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_authorname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pageNumberEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/pages_number"
            android:textColorHint="@color/Dark_Green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorNameEdit"
            app:startIconDrawable="@drawable/ic_pagenumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pageNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/releaseYearEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="23dp"
            android:hint="@string/release_year"
            android:textColorHint="@color/Dark_Green"
            app:layout_constraintBottom_toTopOf="@+id/descriptionEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pageNumberEdit"
            app:layout_constraintVertical_bias="0.328"
            app:startIconDrawable="@drawable/ic_releaseyear">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/releaseYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            android:textColorHint="@color/Dark_Green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pageNumberEdit"
            app:startIconDrawable="@drawable/ic_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="164dp"
            android:background="@color/myPink2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/add_book"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.368"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEdit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>