<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/myPink4">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/Dark_Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_textInputEditText"
            android:layout_width="match_parent"

            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authorNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/Dark_Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/userNameEdit"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pageNumberEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:textColorHint="@color/Dark_Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/authorNameEdit"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pageNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/releaseYearEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:passwordToggleEnabled="true"
        android:hint="@string/repeat_password"
        android:textColorHint="@color/Dark_Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pageNumberEdit"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/releaseYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="#ddcbbd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/ic_top_wave2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="163dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user"
        app:civ_border_color="@color/white"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toBottomOf="@+id/textView7"></de.hdodenhof.circleimageview.CircleImageView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Dark_Green"
        android:clickable="true"
        android:contentDescription="TODO"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        tools:ignore="MissingConstraints"
        android:focusable="true" />



    <TextView
        android:id="@+id/line_lift_or"
        android:layout_width="163dp"
        android:layout_height="16dp"
        android:layout_marginEnd="24dp"
        android:text="ـــــــــــــــــــــــــــــــــــــــــــــــــــــــــ"
        android:textColor="#445C3C"
        app:layout_constraintBottom_toBottomOf="@+id/line_right_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_right_or"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="#445C3C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/line_lift_or"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toEndOf="@+id/line_right_or"
        app:layout_constraintTop_toBottomOf="@+id/releaseYearEdit" />

    <TextView
        android:id="@+id/line_right_or"
        android:layout_width="164dp"
        android:layout_height="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="ـــــــــــــــــــــــــــــــــــــــــــــــــــــــــ"
        android:textColor="#445C3C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseYearEdit"
/>

    <ImageButton
        android:id="@+id/twitter_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="@+id/google_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/google_btn"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/google_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_google"
        app:layout_constraintEnd_toStartOf="@+id/twitter_btn"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <ImageButton
        android:id="@+id/facebook_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="80dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/google_btn"
        app:layout_constraintEnd_toStartOf="@+id/google_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/google_btn"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/register"
        android:layout_width="332dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button_round"
        android:padding="8dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <View
        android:id="@+id/bottomView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/ic_bootom_wave2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />


</androidx.constraintlayout.widget.ConstraintLayout>